--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -510,7 +510,7 @@
       "source": [
         "#@title Parameters\n",
         "key_frames = True #@param {type:\"boolean\"}\n",
-        "text_prompts = \"0: (Hey y'all seen the time loop?: 1)\" #@param {type:\"string\"}\n",
+        "text_prompts = \"0: (Hey y'all seen the time loop?: 1 | Spinning vortex: 1)\" #@param {type:\"string\"}\n",
         "width =  400#@param {type:\"number\"}\n",
         "height =  400#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
@@ -783,6 +783,10 @@
         "                img_temp = cv2.imread(f'{working_dir}/steps/{i:04d}.png')\n",
         "                imageio.imwrite('inverted_temp.png', img_temp)\n",
         "                img_0 = cv2.imread('inverted_temp.png')\n",
+        "                # if i == 1:\n",
+        "                mask = np.zeros(img_0.shape[:2], dtype=\"uint8\")\n",
+        "                cv2.circle(mask, (img_0.shape[0]//2, img_0.shape[1]//2), 190, 255, -1)\n",
+        "                img_0 = cv2.bitwise_and(img_0, img_0, mask=mask)\n",
         "            center = (1*img_0.shape[1]//2, 1*img_0.shape[0]//2)\n",
         "            trans_mat = np.float32(\n",
         "                [[1, 0, translation_x],\n",
