--- a/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
+++ b/zooming-vqgan-clip-z-quantize-method-with-additions.ipynb
@@ -510,7 +510,7 @@
       "source": [
         "#@title Parameters\n",
         "key_frames = True #@param {type:\"boolean\"}\n",
-        "text_prompts = \"0: (Hey y'all seen the time loop?: 1 | Spinning vortex: 1)\" #@param {type:\"string\"}\n",
+        "text_prompts = \"10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\" #@param {type:\"string\"}\n",
         "width =  400#@param {type:\"number\"}\n",
         "height =  400#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
@@ -783,10 +783,6 @@
         "                img_temp = cv2.imread(f'{working_dir}/steps/{i:04d}.png')\n",
         "                imageio.imwrite('inverted_temp.png', img_temp)\n",
         "                img_0 = cv2.imread('inverted_temp.png')\n",
-        "                # if i == 1:\n",
-        "                mask = np.zeros(img_0.shape[:2], dtype=\"uint8\")\n",
-        "                cv2.circle(mask, (img_0.shape[0]//2, img_0.shape[1]//2), 190, 255, -1)\n",
-        "                img_0 = cv2.bitwise_and(img_0, img_0, mask=mask)\n",
         "            center = (1*img_0.shape[1]//2, 1*img_0.shape[0]//2)\n",
         "            trans_mat = np.float32(\n",
         "                [[1, 0, translation_x],\n",
@@ -958,8 +954,8 @@
         "# Set zoomed = True if this cell is run\n",
         "zoomed = True\n",
         "\n",
-        "init_frame = 50#@param {type:\"number\"}\n",
-        "last_frame = 252#@param {type:\"number\"}\n",
+        "init_frame = 1#@param {type:\"number\"}\n",
+        "last_frame = i#@param {type:\"number\"}\n",
         "\n",
         "for i in range(init_frame, last_frame): #\n",
         "    filename = f\"{i:04}.png\"\n",
@@ -1004,8 +1000,8 @@
       "source": [
         "# @title Create video\n",
         "\n",
-        "init_frame = 10#@param {type:\"number\"} This is the frame where the video will start\n",
-        "last_frame = 1#@param {type:\"number\"} You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
+        "init_frame = 1#@param {type:\"number\"} This is the frame where the video will start\n",
+        "last_frame = i#@param {type:\"number\"} You can change i to the number of the last frame you want to generate. It will raise an error if that number of frames does not exist.\n",
         "fps = 12#@param {type:\"number\"}\n",
         "\n",
         "frames = []\n",
@@ -1041,9 +1037,9 @@
         "    filepath\n",
         "]\n",
         "\n",
-        "process = subprocess.Popen(cmd, cwd=f'{working_dir}/steps/')\n",
+        "process = subprocess.Popen(cmd, cwd=f'{working_dir}/steps/', stdout=subprocess.PIPE, stderr=subprocess.PIPE)\n",
         "stdout, stderr = process.communicate()\n",
-        "if stderr:\n",
+        "if process.returncode != 0:\n",
         "    raise RuntimeError(stderr)\n",
         "else:\n",
         "    print(\"The video is ready\")"
