--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -103,7 +103,7 @@
         "id": "fsubmNPc-pD0"
       },
       "source": [
-        "# working_dir = '/content'"
+        "working_dir = '/content'"
       ],
       "execution_count": null,
       "outputs": []
@@ -504,26 +504,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZdlpRFL8UAlW",
-        "cellView": "form"
+        "id": "ZdlpRFL8UAlW"
       },
       "source": [
         "#@title Parameters\n",
-        "key_frames = False #@param {type:\"boolean\"}\n",
-        "text_prompts = \"by John Constable | Oil Painting\" #@param {type:\"string\"}\n",
+        "key_frames = True #@param {type:\"boolean\"}\n",
+        "text_prompts = \"10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\" #@param {type:\"string\"}\n",
         "width =  800#@param {type:\"number\"}\n",
         "height =  450#@param {type:\"number\"}\n",
         "model = \"vqgan_imagenet_f16_16384\" #@param [\"vqgan_imagenet_f16_16384\", \"vqgan_imagenet_f16_1024\", \"wikiart_1024\", \"wikiart_16384\", \"coco\", \"faceshq\", \"sflckr\"]\n",
         "interval =  1#@param {type:\"number\"}\n",
-        "initial_image = \"init.png\"#@param {type:\"string\"}\n",
+        "initial_image = \"\"#@param {type:\"string\"}\n",
         "target_images = \"\"#@param {type:\"string\"}\n",
         "seed = 1#@param {type:\"number\"}\n",
         "max_frames = 50#@param {type:\"number\"}\n",
-        "angle = \"0\"#@param {type:\"string\"}\n",
-        "zoom = \"1\"#@param {type:\"string\"}\n",
-        "translation_x = \"0\"#@param {type:\"string\"}\n",
-        "translation_y = \"0\"#@param {type:\"string\"}\n",
-        "iterations_per_frame = \"10\"#@param {type:\"string\"}\n",
+        "angle = \"0:(0)\"#@param {type:\"string\"}\n",
+        "zoom = \"0:(1)\"#@param {type:\"string\"}\n",
+        "translation_x = \"0:(0)\"#@param {type:\"string\"}\n",
+        "translation_y = \"0:(0)\"#@param {type:\"string\"}\n",
+        "iterations_per_frame = \"0:(10)\"#@param {type:\"string\"}\n",
         "save_all_iterations = False#@param {type:\"boolean\"}\n",
         "\n",
         "model_names={\n",
@@ -681,6 +680,18 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "FqstlKLz2qgt"
+      },
+      "source": [
+        "!cp a.png b.png\n",
+        "!cp a.png c.png"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "g7EDme5RYCrt"
       },
       "source": [
@@ -750,6 +761,7 @@
         "        else:\n",
         "            target_images = target_images.split(\"|\")\n",
         "            target_images = [image.strip() for image in target_images]\n",
+        "        args.image_prompts = target_images\n",
         "\n",
         "        angle = angle_series[i]\n",
         "        zoom = zoom_series[i]\n",
@@ -757,7 +769,8 @@
         "        translation_y = translation_y_series[i]\n",
         "        iterations_per_frame = iterations_per_frame_series[i]\n",
         "        print(\n",
-        "            f'text_prompts: {text_prompts}'\n",
+        "            f'text_prompts: {text_prompts}',\n",
+        "            f'target_images: {target_images}',\n",
         "            f'angle: {angle}',\n",
         "            f'zoom: {zoom}',\n",
         "            f'translation_x: {translation_x}',\n",
