--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -19,6 +19,12 @@
         "\n",
         "<a href='https://ko-fi.com/chigozie' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>\n",
         "\n",
+        "That's the preferred way, but if that doesn't work for you, you can send Tezos to tz1MkuFY8GnWpX8E4BY1YoZWE98zns2RsCDn\n",
+        "\n",
+        "<h2>Note on NFTs</h2>\n",
+        "\n",
+        "You are welcome to create NFTs using this notebook, but if you do, consider using a low-energy blockchain such as Tezos, rather than Ethereum.\n",
+        "\n",
         "<h2>Audio-driven notebook</h2>\n",
         "New: try out this notebook which adds audio-driven animations: <a href=\"https://colab.research.google.com/github/chigozienri/VQGAN-CLIP-animations/blob/main/Music-driven-VQGAN-animations.ipynb\">https://colab.research.google.com/github/chigozienri/VQGAN-CLIP-animations/blob/main/Music-driven-VQGAN-animations.ipynb</a>\n",
         "\n",
@@ -476,14 +482,14 @@
       "execution_count": null,
       "metadata": {
         "id": "ZdlpRFL8UAlW",
-        "scrolled": true,
-        "cellView": "form"
+        "scrolled": true
       },
       "outputs": [],
       "source": [
         "#@title Parameters\n",
         "# @markdown The first time you run this cell with a given model selected, it will take a while because it will download the model. After that, if you change parameters, it won't take as long.\n",
         "\n",
+        "# @markdown New: Want Bézier easing in your animations? Try out https://keyframe-string-generator.glitch.me/ to generate keyframe strings\n",
         "key_frames = True #@param {type:\"boolean\"}\n",
         "text_prompts = \"10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\" #@param {type:\"string\"}\n",
         "width =  400#@param {type:\"number\"}\n",
