--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -482,7 +482,8 @@
       "execution_count": null,
       "metadata": {
         "id": "ZdlpRFL8UAlW",
-        "scrolled": true
+        "scrolled": true,
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
