Fix bug with disabled key_frames

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -583,33 +583,34 @@
         "        raise RuntimeError('Key Frame string not correctly formatted')\n",
         "    return frames\n",
         "\n",
-        "parameter_dicts = dict()\n",
-        "parameter_dicts['zoom'] = parse_key_frames(zoom, prompt_parser=float)\n",
-        "parameter_dicts['angle'] = parse_key_frames(angle, prompt_parser=float)\n",
-        "parameter_dicts['translation_x'] = parse_key_frames(translation_x, prompt_parser=float)\n",
-        "parameter_dicts['translation_y'] = parse_key_frames(translation_y, prompt_parser=float)\n",
-        "parameter_dicts['iterations_per_frame'] = parse_key_frames(iterations_per_frame, prompt_parser=int)\n",
+        "if key_frames:\n",
+        "    parameter_dicts = dict()\n",
+        "    parameter_dicts['zoom'] = parse_key_frames(zoom, prompt_parser=float)\n",
+        "    parameter_dicts['angle'] = parse_key_frames(angle, prompt_parser=float)\n",
+        "    parameter_dicts['translation_x'] = parse_key_frames(translation_x, prompt_parser=float)\n",
+        "    parameter_dicts['translation_y'] = parse_key_frames(translation_y, prompt_parser=float)\n",
+        "    parameter_dicts['iterations_per_frame'] = parse_key_frames(iterations_per_frame, prompt_parser=int)\n",
         "\n",
-        "split_text_prompts = parse_key_frames(text_prompts, prompt_parser=lambda x: x.split('|'))\n",
-        "for frame, prompt_list in split_text_prompts.items():\n",
-        "    for prompt in prompt_list:\n",
-        "        prompt_key, prompt_value = prompt.split(\":\")\n",
-        "        prompt_key = f'text_prompt: {prompt_key.strip()}'\n",
-        "        prompt_value = prompt_value.strip()\n",
-        "        if prompt_key not in parameter_dicts:\n",
-        "            parameter_dicts[prompt_key] = dict()\n",
-        "        parameter_dicts[prompt_key][frame] = prompt_value\n",
+        "    split_text_prompts = parse_key_frames(text_prompts, prompt_parser=lambda x: x.split('|'))\n",
+        "    for frame, prompt_list in split_text_prompts.items():\n",
+        "        for prompt in prompt_list:\n",
+        "            prompt_key, prompt_value = prompt.split(\":\")\n",
+        "            prompt_key = f'text_prompt: {prompt_key.strip()}'\n",
+        "            prompt_value = prompt_value.strip()\n",
+        "            if prompt_key not in parameter_dicts:\n",
+        "                parameter_dicts[prompt_key] = dict()\n",
+        "            parameter_dicts[prompt_key][frame] = prompt_value\n",
         "\n",
         "\n",
-        "split_image_prompts = parse_key_frames(target_images, prompt_parser=lambda x: x.split('|'))\n",
-        "for frame, prompt_list in split_image_prompts.items():\n",
-        "    for prompt in prompt_list:\n",
-        "        prompt_key, prompt_value = prompt.split(\":\")\n",
-        "        prompt_key = f'image_prompt: {prompt_key.strip()}'\n",
-        "        prompt_value = prompt_value.strip()\n",
-        "        if prompt_key not in parameter_dicts:\n",
-        "            parameter_dicts[prompt_key] = dict()\n",
-        "        parameter_dicts[prompt_key][frame] = prompt_value\n",
+        "    split_image_prompts = parse_key_frames(target_images, prompt_parser=lambda x: x.split('|'))\n",
+        "    for frame, prompt_list in split_image_prompts.items():\n",
+        "        for prompt in prompt_list:\n",
+        "            prompt_key, prompt_value = prompt.split(\":\")\n",
+        "            prompt_key = f'image_prompt: {prompt_key.strip()}'\n",
+        "            prompt_value = prompt_value.strip()\n",
+        "            if prompt_key not in parameter_dicts:\n",
+        "                parameter_dicts[prompt_key] = dict()\n",
+        "            parameter_dicts[prompt_key][frame] = prompt_value\n",
         "\n",
         "\n",
         "def add_inbetweens():\n",
@@ -1175,9 +1176,12 @@
         "xmin = 0\n",
         "xmax = max_frames\n",
         "\n",
-        "if parameter not in parameter_dicts:\n",
-        "    parameter_dicts[parameter] = {}\n",
-        "display.display(IPython.display.HTML( curve_editor_html % (parameter, json.dumps(parameter_dicts[parameter]), xmin, xmax, ymin, ymax)))"
+        "if key_frames:\n",
+        "    if parameter not in parameter_dicts:\n",
+        "        parameter_dicts[parameter] = {}\n",
+        "    display.display(IPython.display.HTML( curve_editor_html % (parameter, json.dumps(parameter_dicts[parameter]), xmin, xmax, ymin, ymax)))\n",
+        "else:\n",
+        "    print('Only relevant if keyframes is selected')"
       ]
     },
     {
@@ -1185,7 +1189,7 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "z0yP0seMe-vb"
+        "id": "GREooWaEMlYR"
       },
       "outputs": [],
       "source": [
@@ -1206,9 +1210,12 @@
         "xmin = 0\n",
         "xmax = max_frames\n",
         "\n",
-        "if parameter not in parameter_dicts:\n",
-        "    parameter_dicts[parameter] = {}\n",
-        "display.display(IPython.display.HTML( curve_editor_html % (parameter, json.dumps(parameter_dicts[parameter]), xmin, xmax, ymin, ymax)))"
+        "if key_frames:\n",
+        "    if parameter not in parameter_dicts:\n",
+        "        parameter_dicts[parameter] = {}\n",
+        "    display.display(IPython.display.HTML( curve_editor_html % (parameter, json.dumps(parameter_dicts[parameter]), xmin, xmax, ymin, ymax)))\n",
+        "else:\n",
+        "    print('Only relevant if keyframes is selected')"
       ]
     },
     {
@@ -1216,7 +1223,7 @@
       "execution_count": null,
       "metadata": {
         "cellView": "form",
-        "id": "o8u5ohZEe_i8"
+        "id": "K9LdYFxuMlhK"
       },
       "outputs": [],
       "source": [
@@ -1231,15 +1238,18 @@
         "# @markdown You can copy and paste this cell multiple times to edit as many animation curves as you need.\n",
         "\n",
         "\n",
-        "parameter = \"text_prompt: Apple\" #@param [\"angle\", \"zoom\", \"translation_x\", \"translation_y\", \"iterations_per_frame\", \"text_prompt: ENTER HERE\"] {allow-input: true}\n",
+        "parameter = \"text_prompts: Apple\" #@param [\"angle\", \"zoom\", \"translation_x\", \"translation_y\", \"iterations_per_frame\", \"text_prompt: ENTER HERE\"] {allow-input: true}\n",
         "ymin =  -1#@param {type:\"number\"}\n",
         "ymax =  2#@param {type:\"number\"}\n",
         "xmin = 0\n",
         "xmax = max_frames\n",
         "\n",
-        "if parameter not in parameter_dicts:\n",
-        "    parameter_dicts[parameter] = {}\n",
-        "display.display(IPython.display.HTML( curve_editor_html % (parameter, json.dumps(parameter_dicts[parameter]), xmin, xmax, ymin, ymax)))"
+        "if key_frames:\n",
+        "    if parameter not in parameter_dicts:\n",
+        "        parameter_dicts[parameter] = {}\n",
+        "    display.display(IPython.display.HTML( curve_editor_html % (parameter, json.dumps(parameter_dicts[parameter]), xmin, xmax, ymin, ymax)))\n",
+        "else:\n",
+        "    print('Only relevant if keyframes is selected')"
       ]
     },
     {
@@ -1253,7 +1263,8 @@
       "source": [
         "#@title Run me (Add inbetweens to parameters)\n",
         "\n",
-        "add_inbetweens()"
+        "if key_frames:\n",
+        "    add_inbetweens()"
       ]
     },
     {
@@ -1300,8 +1311,7 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "g7EDme5RYCrt",
-        "cellView": "form"
+        "id": "g7EDme5RYCrt"
       },
       "outputs": [],
       "source": [
@@ -1631,7 +1641,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "cellView": "form",
         "id": "mFo5vz0UYBrF"
       },
       "outputs": [],
