--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -1311,7 +1311,8 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "g7EDme5RYCrt"
+        "id": "g7EDme5RYCrt",
+        "cellView": "form"
       },
       "outputs": [],
       "source": [
