Remove reference to music driven notebook

--- a/VQGAN-CLIP-animations.ipynb
+++ b/VQGAN-CLIP-animations.ipynb
@@ -15,18 +15,13 @@
         "\n",
         "<h2>Donation Link</h2>\n",
         "\n",
-        "If you want, you can donate to support me at <a href=\"https://ko-fi.com/chigozie\">ko-fi</a>. No pressure (but I'd love to know if you create a squillion-dollar NFT, or just had fun!).\n",
+        "If you want, you can donate to support me at <a href=\"https://ko-fi.com/chigozie\">ko-fi</a>. No pressure (but I'd love to know if you create something cool, or just had fun!).\n",
         "\n",
         "<a href='https://ko-fi.com/chigozie' target='_blank'><img height='36' style='border:0px;height:36px;' src='https://cdn.ko-fi.com/cdn/kofi2.png?v=3' border='0' alt='Buy Me a Coffee at ko-fi.com' /></a>\n",
         "\n",
-        "That's the preferred way, but if that doesn't work for you, you can send Tezos to tz1MkuFY8GnWpX8E4BY1YoZWE98zns2RsCDn\n",
+        "<h2>Can I make NFTs?</h2>\n",
         "\n",
-        "<h2>Note on NFTs</h2>\n",
-        "\n",
-        "You are welcome to create NFTs using this notebook, but if you do, consider using a low-energy blockchain such as Tezos, rather than Ethereum.\n",
-        "\n",
-        "<h2>Audio-driven notebook</h2>\n",
-        "New: try out this notebook which adds audio-driven animations: <a href=\"https://colab.research.google.com/github/chigozienri/VQGAN-CLIP-animations/blob/main/Music-driven-VQGAN-animations.ipynb\">https://colab.research.google.com/github/chigozienri/VQGAN-CLIP-animations/blob/main/Music-driven-VQGAN-animations.ipynb</a>\n",
+        "If you must. If you do, consider using a low-energy blockchain such as Tezos, rather than Ethereum.\n",
         "\n",
         "<h2>Too complicated? Want more?</h2>\n",
         "\n",
@@ -416,7 +411,9 @@
       "source": [
         "## Instructions for setting parameters:\n",
         "\n",
-        "If you want to create an animation with lots of keyframes, try out this spreadsheet by @EphemeralInc for constructing the strings: https://docs.google.com/spreadsheets/d/1sJ0PMHUPIYkS7LSxhzTThEP7rZ5CFonz-dBxqe8F2uc\n",
+        "If you want to create an animation with lots of keyframes, try out this spreadsheet by @EphemeralInc for constructing the strings: https://docs.google.com/spreadsheets/d/1sJ0PMHUPIYkS7LSxhzTThEP7rZ5CFonz-dBxqe8F2uc.\n",
+        "\n",
+        "You can also try https://keyframe-string-generator.glitch.me/ or https://audio-keyframe-generator.glitch.me/ to construct strings using a visual editor, or an audio file.\n",
         "\n",
         "| Parameter  |  Usage |\n",
         "|---|---|\n",
@@ -490,7 +487,7 @@
         "#@title Parameters\n",
         "# @markdown The first time you run this cell with a given model selected, it will take a while because it will download the model. After that, if you change parameters, it won't take as long.\n",
         "\n",
-        "# @markdown New: Want Bézier easing in your animations? Try out https://keyframe-string-generator.glitch.me/ to generate keyframe strings\n",
+        "# @markdown New: Want Bézier easing in your animations? Try out https://keyframe-string-generator.glitch.me/ to generate keyframe strings. Want to use an audio file to drive parameters? Try https://audio-keyframe-generator.glitch.me/\n",
         "key_frames = True #@param {type:\"boolean\"}\n",
         "text_prompts = \"10:(Apple: 1| Orange: 0), 20: (Apple: 0| Orange: 1| Peach: 1)\" #@param {type:\"string\"}\n",
         "width =  400#@param {type:\"number\"}\n",
